--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="background">
-    <a href="" class="login" routerLink="/login" >Login</a>
+    <a href="" class="login" (click)="login" >Login</a>
 </div>
 
 <router-outlet></router-outlet>
