--- a/src/app/search-topic/search-topic.component.html
+++ b/src/app/search-topic/search-topic.component.html
@@ -33,4 +33,4 @@
     </div>
 </div>
 
-<ng-chat [adapter]="adapter" [userId]="userId"></ng-chat>
+<ng-chat [adapter]="adapter" [userId]="userId" title="Groups" audioEnabled=false></ng-chat>
