--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -24,10 +24,10 @@
 
 .row{
     height: 100%;
-    padding-top: 80px;
+    padding-top: 20px;
     padding-bottom: 80px;
-    padding-left: 30px;
-    padding-right: 20px;
+    // padding-left: 30px;
+    // padding-right: 20px;
     .col{
         display: flex;
     }
@@ -46,50 +46,90 @@
 }
 
 .welcome{
-    font-size: 40px;
+    font-size: 42px;
     color: rgb(6, 107, 11);
 }
 
 .sign{
-    font-size: 20px;
+    font-size: 21px;
     color: rgb(20, 158, 15);
 }
 
 .click{
     margin-top: 20px;
+    color: rgb(20, 158, 15);
 }
 
-.btnGoogle{
-    margin-bottom: 18px;
-    background-color: rgb(250, 68, 68);
-    color: rgb(252, 252, 252);
-    border-radius: 3.5px;
-    box-shadow: 3px 3px 4px 0px hsla(210, 2%, 47%, 0.6);
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 25px;
-    padding-right: 25px;
+.label{
+    width: 73px;
+}
+
+.username{
+    width: 300px;
+    height: 33px;
     border: none;
-}
-.btnGoogle:hover{
-    background: rgb(243, 16, 16);
+    border-radius: 4px;
+    box-shadow: 3px 3px 4px 0px hsla(240, 1%, 67%, 0.6);
 }
 
-.btnFacebook{
-    background-color: rgb(71, 68, 248);
-    color: white;
-    border-radius: 3.5px;
-    box-shadow: 3px 3px 4px 0px hsla(210, 2%, 47%, 0.6);
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
+.username:focus {
+    border: rgb(184, 182, 179);
+}
+
+.password{
+    width: 300px;
+    height: 33px;
     border: none;
+    border-radius: 4px;
+    box-shadow: 3px 3px 4px 0px hsla(240, 1%, 67%, 0.6);
 }
 
-.btnFacebook:hover{
-    background: rgb(3, 3, 209);
+.btn-login{
+    width: 380px;
+    height: 38px;
+    display: flex;
+    justify-content: end;
 }
+
+.loginBtn{
+    box-shadow: 3px 3px 4px 0px hsla(240, 1%, 58%, 0.6);
+}
+
+.error{
+    color: red;
+}
+
+// .btnGoogle{
+//     margin-bottom: 18px;
+//     background-color: rgb(250, 68, 68);
+//     color: rgb(252, 252, 252);
+//     border-radius: 3.5px;
+//     box-shadow: 3px 3px 4px 0px hsla(210, 2%, 47%, 0.6);
+//     padding-top: 5px;
+//     padding-bottom: 5px;
+//     padding-left: 25px;
+//     padding-right: 25px;
+//     border: none;
+// }
+// .btnGoogle:hover{
+//     background: rgb(243, 16, 16);
+// }
+
+// .btnFacebook{
+//     background-color: rgb(71, 68, 248);
+//     color: white;
+//     border-radius: 3.5px;
+//     box-shadow: 3px 3px 4px 0px hsla(210, 2%, 47%, 0.6);
+//     padding-top: 5px;
+//     padding-bottom: 5px;
+//     padding-left: 15px;
+//     padding-right: 15px;
+//     border: none;
+// }
+
+// .btnFacebook:hover{
+//     background: rgb(3, 3, 209);
+// }
 
 .account{
     color: rgb(20, 158, 15);
